--- a/index.html
+++ b/index.html
@@ -48,7 +48,18 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#summary" id="toc-summary" class="nav-link active" data-scroll-target="#summary">Summary</a></li>
+  <li><a href="#summary" id="toc-summary" class="nav-link active" data-scroll-target="#summary">Summary</a>
+  <ul>
+  <li><a href="#data-checking" id="toc-data-checking" class="nav-link" data-scroll-target="#data-checking">Data Checking</a></li>
+  <li><a href="#heat-wave-tables" id="toc-heat-wave-tables" class="nav-link" data-scroll-target="#heat-wave-tables">Heat Wave Tables</a>
+  <ul>
+  <li><a href="#th-percentile-threshold" id="toc-th-percentile-threshold" class="nav-link" data-scroll-target="#th-percentile-threshold">85th Percentile Threshold</a></li>
+  <li><a href="#th-percentile-threshold-1" id="toc-th-percentile-threshold-1" class="nav-link" data-scroll-target="#th-percentile-threshold-1">90th Percentile Threshold</a></li>
+  <li><a href="#th-percentile-threshold-2" id="toc-th-percentile-threshold-2" class="nav-link" data-scroll-target="#th-percentile-threshold-2">95th Percentile Threshold</a></li>
+  <li><a href="#th-percentile-threshold-3" id="toc-th-percentile-threshold-3" class="nav-link" data-scroll-target="#th-percentile-threshold-3">99th Percentile Threshold</a></li>
+  </ul></li>
+  <li><a href="#thresholds" id="toc-thresholds" class="nav-link" data-scroll-target="#thresholds">Thresholds</a></li>
+  </ul></li>
   <li><a href="#barcelona" id="toc-barcelona" class="nav-link" data-scroll-target="#barcelona">Barcelona</a></li>
   <li><a href="#madrid" id="toc-madrid" class="nav-link" data-scroll-target="#madrid">Madrid</a></li>
   <li><a href="#valencia" id="toc-valencia" class="nav-link" data-scroll-target="#valencia">Valencia</a></li>
@@ -100,6 +111,8 @@ ul.task-list li input[type="checkbox"] {
 <section id="summary" class="level2">
 <h2 class="anchored" data-anchor-id="summary">Summary</h2>
 <p>CAUTION: There is a gap in the dates because the historical data has not yet caught up with our first recording of the realtime data.</p>
+<section id="data-checking" class="level3">
+<h3 class="anchored" data-anchor-id="data-checking">Data Checking</h3>
 <p>Number of station-readings available for each municipality during past week:</p>
 <div class="cell">
 <div class="cell-output-display">
@@ -161,6 +174,11 @@ ul.task-list li input[type="checkbox"] {
 
 </div>
 </div>
+</section>
+<section id="heat-wave-tables" class="level3">
+<h3 class="anchored" data-anchor-id="heat-wave-tables">Heat Wave Tables</h3>
+<section id="th-percentile-threshold" class="level4">
+<h4 class="anchored" data-anchor-id="th-percentile-threshold">85th Percentile Threshold</h4>
 <p>Summary of heat waves this year, based on two consecutive days at 85th percentile of daily minimum heat index:</p>
 <div class="cell">
 <div class="cell-output-display">
@@ -307,6 +325,9 @@ ul.task-list li input[type="checkbox"] {
 
 </div>
 </div>
+</section>
+<section id="th-percentile-threshold-1" class="level4">
+<h4 class="anchored" data-anchor-id="th-percentile-threshold-1">90th Percentile Threshold</h4>
 <p>Summary of heat waves this year, based on two consecutive days at 90th percentile of daily minimum heat index:</p>
 <div class="cell">
 <div class="cell-output-display">
@@ -397,6 +418,9 @@ ul.task-list li input[type="checkbox"] {
 
 </div>
 </div>
+</section>
+<section id="th-percentile-threshold-2" class="level4">
+<h4 class="anchored" data-anchor-id="th-percentile-threshold-2">95th Percentile Threshold</h4>
 <p>Summary of heat waves this year, based on two consecutive days at 95th percentile of daily minimum heat index:</p>
 <div class="cell">
 <div class="cell-output-display">
@@ -459,34 +483,19 @@ ul.task-list li input[type="checkbox"] {
 
 </div>
 </div>
+</section>
+<section id="th-percentile-threshold-3" class="level4">
+<h4 class="anchored" data-anchor-id="th-percentile-threshold-3">99th Percentile Threshold</h4>
 <p>Summary of heat waves this year, based on two consecutive days at 99th percentile of daily minimum heat index:</p>
 <div class="cell">
-<div class="cell-output-display">
-<table class="caption-top" data-quarto-postprocess="true">
-<thead>
-<tr class="header">
-<th style="text-align: left;" data-quarto-table-cell-role="th">date</th>
-<th style="text-align: left;" data-quarto-table-cell-role="th">indicativo</th>
-<th style="text-align: left;" data-quarto-table-cell-role="th">station_name</th>
-<th style="text-align: left;" data-quarto-table-cell-role="th">municipality_name</th>
-<th style="text-align: right;" data-quarto-table-cell-role="th">threshold</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<th></th>
-<th></th>
-<th></th>
-<th></th>
-<th></th>
-</tr>
-
-</tbody>
-</table>
-
-
+<div class="cell-output cell-output-stdout">
+<pre><code>No heat waves yet at this threshold.</code></pre>
 </div>
 </div>
+</section>
+</section>
+<section id="thresholds" class="level3">
+<h3 class="anchored" data-anchor-id="thresholds">Thresholds</h3>
 <p>Heat wave thresholds:</p>
 <div class="cell">
 <div class="cell-output-display">
@@ -590,6 +599,7 @@ ul.task-list li input[type="checkbox"] {
 
 </div>
 </div>
+</section>
 </section>
 <section id="barcelona" class="level2">
 <h2 class="anchored" data-anchor-id="barcelona">Barcelona</h2>
