added modified time to report

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="summary" class="level2">
 <h2 class="anchored" data-anchor-id="summary">Summary</h2>
 <p>CAUTION: There is a gap in the dates because the historical data has not yet caught up with our first recording of the realtime data.</p>
+<p>Note: This report was last modified at 2025-06-26 06:09:50.304192.</p>
 <section id="data-checking" class="level3">
 <h3 class="anchored" data-anchor-id="data-checking">Data Checking</h3>
 <p>Number of station-readings available for each municipality during past week:</p>
