updated from laptop

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="summary" class="level2">
 <h2 class="anchored" data-anchor-id="summary">Summary</h2>
 <p>CAUTION: There is a gap in the dates because the historical data has not yet caught up with our first recording of the realtime data.</p>
-<p>Note: This report was last modified at 2025-06-27 10:21:14.562488.</p>
+<p>Note: This report was last modified at 2025-06-27 11:32:46.229494.</p>
 <section id="data-checking" class="level3">
 <h3 class="anchored" data-anchor-id="data-checking">Data Checking</h3>
 <p>Number of station-readings available for each municipality during past week:</p>
@@ -187,6 +187,14 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: right;">3</td>
 <td style="text-align: right;">2</td>
 <td style="text-align: right;">2</td>
+<td style="text-align: right;">1</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">2025-06-26</td>
+<td style="text-align: right;">1</td>
+<td style="text-align: right;">3</td>
+<td style="text-align: right;">2</td>
+<td style="text-align: right;">1</td>
 <td style="text-align: right;">1</td>
 </tr>
 </tbody>
