--- a/hourly_monitor.html
+++ b/hourly_monitor.html
@@ -100,7 +100,7 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="readings-per-day" class="level2">
 <h2 class="anchored" data-anchor-id="readings-per-day">Readings per day</h2>
-<p>Note: This report was last modified at 2025-07-01 10:35:30.102157.</p>
+<p>Note: This report was last modified at 2025-07-01 10:50:30.576165.</p>
 <div class="cell">
 <div class="cell-output-display">
 <table class="caption-top table table-sm table-striped small" data-quarto-postprocess="true">
@@ -197,11 +197,11 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: right;">8</td>
 <td style="text-align: right;">7</td>
 <td style="text-align: right;">11</td>
-<td style="text-align: right;">10</td>
+<td style="text-align: right;">11</td>
+<td style="text-align: right;">11</td>
+<td style="text-align: right;">11</td>
 <td style="text-align: right;">11</td>
 <td style="text-align: right;">10</td>
-<td style="text-align: right;">10</td>
-<td style="text-align: right;">9</td>
 </tr>
 </tbody>
 </table>
@@ -233,6 +233,14 @@ ul.task-list li input[type="checkbox"] {
 </div>
 <div class="cell-output cell-output-stdout">
 <pre><code>Sevilla</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>Warning: Removed 1 row containing missing values or values outside the scale range
+(`geom_line()`).</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>Warning: Removed 1 row containing missing values or values outside the scale range
+(`geom_point()`).</code></pre>
 </div>
 <div class="cell-output-display">
 <div>
@@ -288,6 +296,14 @@ ul.task-list li input[type="checkbox"] {
 </div>
 <div class="cell-output cell-output-stdout">
 <pre><code>Sevilla</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>Warning: Removed 1 row containing missing values or values outside the scale range
+(`geom_line()`).</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>Warning: Removed 1 row containing missing values or values outside the scale range
+(`geom_point()`).</code></pre>
 </div>
 <div class="cell-output-display">
 <div>
@@ -399,6 +415,14 @@ ul.task-list li input[type="checkbox"] {
 <div class="cell-output cell-output-stdout">
 <pre><code>Sevilla</code></pre>
 </div>
+<div class="cell-output cell-output-stderr">
+<pre><code>Warning: Removed 1 row containing missing values or values outside the scale range
+(`geom_line()`).</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>Warning: Removed 1 row containing missing values or values outside the scale range
+(`geom_point()`).</code></pre>
+</div>
 <div class="cell-output-display">
 <div>
 <figure class="figure">
@@ -453,6 +477,14 @@ ul.task-list li input[type="checkbox"] {
 </div>
 <div class="cell-output cell-output-stdout">
 <pre><code>Sevilla</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>Warning: Removed 1 row containing missing values or values outside the scale range
+(`geom_line()`).</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>Warning: Removed 1 row containing missing values or values outside the scale range
+(`geom_point()`).</code></pre>
 </div>
 <div class="cell-output-display">
 <div>
