new data and log files (cluster - automated)

--- a/hourly_monitor.html
+++ b/hourly_monitor.html
@@ -100,7 +100,7 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="readings-per-day" class="level2">
 <h2 class="anchored" data-anchor-id="readings-per-day">Readings per day</h2>
-<p>Note: This report was last modified at 2025-07-13 00:20:31.176438.</p>
+<p>Note: This report was last modified at 2025-07-13 00:35:30.349462.</p>
 <div class="cell">
 <div class="cell-output-display">
 <table class="caption-top table table-sm table-striped small" data-quarto-postprocess="true">
@@ -334,6 +334,18 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: right;">24</td>
 <td style="text-align: right;">23</td>
 <td style="text-align: right;">24</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">2025-07-13</td>
+<td style="text-align: right;">1</td>
+<td style="text-align: right;">NA</td>
+<td style="text-align: right;">1</td>
+<td style="text-align: right;">1</td>
+<td style="text-align: right;">1</td>
+<td style="text-align: right;">1</td>
+<td style="text-align: right;">1</td>
+<td style="text-align: right;">1</td>
+<td style="text-align: right;">1</td>
 </tr>
 </tbody>
 </table>
