new data and log files (cluster - automated)

--- a/hourly_monitor.html
+++ b/hourly_monitor.html
@@ -100,7 +100,7 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="readings-per-day" class="level2">
 <h2 class="anchored" data-anchor-id="readings-per-day">Readings per day</h2>
-<p>Note: This report was last modified at 2025-07-22 19:20:34.247668.</p>
+<p>Note: This report was last modified at 2025-07-22 19:35:32.76227.</p>
 <div class="cell">
 <div class="cell-output-display">
 <table class="caption-top table table-sm table-striped small" data-quarto-postprocess="true">
@@ -253,15 +253,15 @@ ul.task-list li input[type="checkbox"] {
 </tr>
 <tr class="even">
 <td style="text-align: left;">2025-07-22</td>
-<td style="text-align: right;">19</td>
-<td style="text-align: right;">16</td>
-<td style="text-align: right;">19</td>
-<td style="text-align: right;">19</td>
-<td style="text-align: right;">19</td>
-<td style="text-align: right;">19</td>
-<td style="text-align: right;">17</td>
-<td style="text-align: right;">19</td>
-<td style="text-align: right;">19</td>
+<td style="text-align: right;">20</td>
+<td style="text-align: right;">20</td>
+<td style="text-align: right;">20</td>
+<td style="text-align: right;">20</td>
+<td style="text-align: right;">20</td>
+<td style="text-align: right;">20</td>
+<td style="text-align: right;">18</td>
+<td style="text-align: right;">20</td>
+<td style="text-align: right;">20</td>
 </tr>
 </tbody>
 </table>
@@ -407,9 +407,11 @@ ul.task-list li input[type="checkbox"] {
 <pre><code>Madrid</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
-<pre><code>Warning: Removed 1 row containing missing values or values outside the scale range
-(`geom_line()`).
-Removed 1 row containing missing values or values outside the scale range
+<pre><code>Warning: Removed 2 rows containing missing values or values outside the scale range
+(`geom_line()`).</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>Warning: Removed 2 rows containing missing values or values outside the scale range
 (`geom_point()`).</code></pre>
 </div>
 <div class="cell-output-display">
@@ -472,7 +474,7 @@ Removed 1 row containing missing values or values outside the scale range
 <pre><code>Madrid</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
-<pre><code>Warning: Removed 1 row containing missing values or values outside the scale range
+<pre><code>Warning: Removed 2 rows containing missing values or values outside the scale range
 (`geom_point()`).</code></pre>
 </div>
 <div class="cell-output-display">
@@ -539,9 +541,11 @@ Removed 1 row containing missing values or values outside the scale range
 <pre><code>Madrid</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
-<pre><code>Warning: Removed 1 row containing missing values or values outside the scale range
-(`geom_line()`).
-Removed 1 row containing missing values or values outside the scale range
+<pre><code>Warning: Removed 2 rows containing missing values or values outside the scale range
+(`geom_line()`).</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>Warning: Removed 2 rows containing missing values or values outside the scale range
 (`geom_point()`).</code></pre>
 </div>
 <div class="cell-output-display">
